--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
         <script src="./js/game.js"></script>
         <script src="./js/maps.js"></script>
         <script src="./js/map1.js"></script>
+        <link rel="stylesheet" href="./css/index.css">
     </head>
 
     <body>
