--- a/index.html
+++ b/index.html
@@ -7,10 +7,11 @@
         <script src="./js/game.js"></script>
         <script src="./js/maps.js"></script>
         <script src="./js/map1.js"></script>
+        <script src="./js/wiki.js"></script>
         <link rel="stylesheet" href="./css/index.css">
     </head>
 
     <body>
-        
+
     </body>
 </html>
